Update dialog widow, fix position and scroll on mobile

--- a/WebContent/resources/learnweb-layout/sass/layouts/_template.scss
+++ b/WebContent/resources/learnweb-layout/sass/layouts/_template.scss
@@ -23,13 +23,16 @@ body,
 .layout-wrapper {
   .layout-breadcrumb {
     background-color: $white;
-    padding: 0.5rem 1rem;
     border: 1px solid $themePrimaryColor;
     border-left: 0;
     border-right: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    flex-wrap: wrap;
+
+    > * {
+      margin: $grid-gutter-width/2 $grid-gutter-width;
+    }
   }
 
   .layout-main {
